<resources>
    <string name="app_name">Experiment-1</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="textview">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="login">登陆</string>
    <string name="loginTest">实验一</string>
    <string name="createdatabase">CreateDataBase</string>
    <string name="adddata">AddData</string>
    <string name="updatedata">UpdateData</string>
    <string name="deletedata">DeleteData</string>
    <string name="querydata">QueryData</string>
    <string name="rememberPass">记住密码</string>
    <string name="broadcast">实验二</string>
    <string name="dynamicRegiste">动态注册</string>
    <string name="MyBroaadcast">自定义接收与广播</string>
    <string name="MyReceiver">状态栏显示通知</string>
    <string name="pendingintent_activity">使用PendingIntent打开通知Activity</string>
    <string name="channel_name">BootBroadcastReceiver</string>
    <string name="channel_description">状态栏通知</string>
    <string name="contentresolver">ContentResolver</string>
    <string name="cursor">cursor</string>
    <string name="gps">GPS</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="contactsinfo">contactsInfo</string>
    <string name="your_location">your location</string>
    <string name="resume">resume</string>
    <string name="play">play</string>
    <string name="pause">Pause</string>
    <string name="tack_a_picture">tack a picture</string>
    <string name="your_picture">your picture</string>

</resources>